fix long codeblocks overflowing div blog-post-content
Long lines of code within code blocks overflow the blog-post-content div, creating horizontal scroll bars. It does not occur with standard p, ul, etc.  Tested using hugo 0.145.0, Firefox, and Chromium.

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -152,6 +152,7 @@ pre {
     padding: 0.5em;
     code {
         background-color: transparent;
+        white-space: preserve;
     }
 }
 
